--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,6 @@ RUN npm run build -- --outputPath=dist --configuration=production || npm run bui
 
 FROM nginx:stable-alpine
 RUN rm -rf /usr/share/nginx/html/*
-COPY --from=build /app/dist/ /usr/share/nginx/html
+COPY --from=build /app/dist/angular-15-crud/ /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
